untroduced keywords_finder.py into the project

--- a/templates/result.html
+++ b/templates/result.html
@@ -21,7 +21,7 @@
         <a href='/article' class='button-head regular small-text'>ПОЛУЧИТЬ КЛЮЧЕВЫЕ СЛОВА</a>
     </div>
     <div class="main">
-        <div class="light medium-text">Результат:&nbsp;{{ data }}</div>
+        <div class="light medium-text">Результат: {{ data }}</div>
     </div>
     <div class='footer'>
         HeaderDefiner, 2022
