--- a/static/style.css
+++ b/static/style.css
@@ -62,7 +62,7 @@ body {
     align-items: center;
     background-color: #39a0ff;
     padding: 13rem;
-    height: 35vh;
+    min-height: 35vh;
 }
 
 .left{
@@ -195,6 +195,13 @@ body {
     background-color: transparent;
 }
 
+.flex-column{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 @media screen and (max-width: 1439px){
     .right{
     display: none;
@@ -230,7 +237,7 @@ body {
 
 @media screen and (min-width: 1800px){
     .main{
-        height: 55vh;
+        min-height: 55vh;
     }
 }
 
