--- a/templates/index.html
+++ b/templates/index.html
@@ -12,21 +12,23 @@
         <img src="{{ url_for( 'static', filename='logo.png', v=1)}}" alt="logo" width='100px' class='img-pos' onclick="clickLogo()">
         <div class='buttons-pos'>
             <a href='/' class='button-head regular small-text black-color'>ГЛАВНАЯ</a>
+            <a href='/faq' class='button-head regular small-text'>КАК ИСПОЛЬЗОВАТЬ?</a>
             <a href='/article' class='button-head regular small-text'>ПОЛУЧИТЬ КЛЮЧЕВЫЕ СЛОВА</a>
             <button class="open_menu button-head" onclick="openMenu()"><img src="{{ url_for( 'static', filename='menu.svg', v=1)}}" alt="menu"/></button>
         </div>
     </header>
     <div class="modal-menu">
         <a href='/' class='button-head regular small-text black-color'>ГЛАВНАЯ</a>
+        <a href='/faq' class='button-head regular small-text'>КАК ИСПОЛЬЗОВАТЬ?</a>
         <a href='/article' class='button-head regular small-text'>ПОЛУЧИТЬ КЛЮЧЕВЫЕ СЛОВА</a>
     </div>
     <div class='main'>
         <div class='left'>
             <div class='inner-left'>
-                <div class='bold bold-text'>headdef</div>
-                <div class='light medium-text'>Header Definer</div>
+                <div class='bold bold-text'>Нужен заголовок?</div>
+                <div class='light medium-text'>HeaderDefiner</div>
                 <div class='stick'></div>
-                <div class='thin medium-text' style='margin: 3rem;'>HeaderDefiner - сервис для получения слов.</div>
+                <div class='thin medium-text' style='margin: 3rem;'>HeaderDefiner - сервис для получения наиболее подходящих слов из текста.</div>
                 <a href='/article' class='button-main regular small-text'>ПОДОБРАТЬ КЛЮЧЕВЫЕ СЛОВА</a>
             </div>
         </div>
