--- a/templates/faq.html
+++ b/templates/faq.html
@@ -23,8 +23,8 @@
         <a href='/article' class='button-head regular small-text'>ПОЛУЧИТЬ КЛЮЧЕВЫЕ СЛОВА</a>
     </div>
     <div class="main faq">
-        <div class="medium bold-text">ИСПОЛЬЗОВАНИЕ СЕРВИСА</div>
-        <div class="regular medium-text">
+        <div class="bold bold-text">ИСПОЛЬЗОВАНИЕ СЕРВИСА</div>
+        <div class="light medium-text">
             Сервис HeaderDefiner предназначен для получения ключевых слов из статьи.
             Ключевые слова определяются с использованием Yandex.Wordstat, что обеспечивает их наиболее точный подбор.
             На основе этих слов может создаваться наиболее подходящий заголовок, ведь учитывается статистика клиентских
