A couple of replacings, bugs fixed

--- a/templates/result.html
+++ b/templates/result.html
@@ -12,6 +12,7 @@
         <img src="{{ url_for( 'static', filename='logo.png', v=1)}}" alt="logo" width='100px' class='img-pos' onclick="clickLogo()">
         <div class='buttons-pos'>
             <a href='/' class='button-head regular small-text'>ГЛАВНАЯ</a>
+            <a href='/faq' class='button-head regular small-text'>КАК ИСПОЛЬЗОВАТЬ?</a>
             <a href='/article' class='button-head regular small-text'>ПОЛУЧИТЬ КЛЮЧЕВЫЕ СЛОВА</a>
             <button class="open_menu button-head" onclick="openMenu()"><img src="{{ url_for( 'static', filename='menu.svg', v=1)}}" alt="menu"/></button>
         </div>
