Fixed some issues

--- a/templates/wordstat_report.html
+++ b/templates/wordstat_report.html
@@ -23,7 +23,7 @@
     </div>
     <div class="main">
         <div class="flex-column">
-            <div class='bold bold-text'>Вот что выдет Wordstat: </div>
+            <div class='bold bold-text'>Вот что выдает Wordstat: </div>
             <br>
             <div class="flex-column">
                 <div class="flex-column" style="align-items: flex-start;">
